auth file: default urls to keystone v3
Keystone v3 status is CURRENT [1] while v2.0 is SUPPORTED [2].
A lot of work has been done in puppet-keystone to use v3 API by default,
even if we can still run v2.0.

This patch:

* add new parameter and set IDENTITY_API_VERSION to 3 by default
* change urls for v3 endpoints by default
* change tenant_name parameter to undef by default
* change project_name parameter to 'openstack' by default
* change project_domain and user_domain parameters to 'default' by
  default

It's a non-backward compatible change, for the users who don't set the
values that have been changed.
Though they can still override the default and switching back to
v2.0 if needed.

[1] http://developer.openstack.org/api-ref-identity-v3.html
[2] http://developer.openstack.org/api-ref-identity-v2.html

Change-Id: If97d24e627ff5ff688f5fb634221a29a98f0ae90

--- a/templates/openrc.erb
+++ b/templates/openrc.erb
@@ -4,7 +4,9 @@ export OS_SERVICE_TOKEN='<%= @service_token.gsub(/'/){ %q(\') } %>'
 export OS_SERVICE_ENDPOINT='<%= @service_endpoint %>'
 <% end -%>
 export OS_NO_CACHE='<%= @use_no_cache %>'
+<% if @tenant_name -%>
 export OS_TENANT_NAME='<%= @tenant_name %>'
+<% end -%>
 <% if @project_name -%>
 export OS_PROJECT_NAME='<%= @project_name %>'
 <% end -%>
@@ -24,3 +26,4 @@ export GLANCE_ENDPOINT_TYPE='<%= @glance_endpoint_type %>'
 export KEYSTONE_ENDPOINT_TYPE='<%= @keystone_endpoint_type %>'
 export NOVA_ENDPOINT_TYPE='<%= @nova_endpoint_type %>'
 export NEUTRON_ENDPOINT_TYPE='<%= @neutron_endpoint_type %>'
+export IDENTITY_API_VERSION='<%= @identity_api_version %>'
