--- a/templates/openrc.erb
+++ b/templates/openrc.erb
@@ -26,4 +26,4 @@ export GLANCE_ENDPOINT_TYPE='<%= @glance_endpoint_type %>'
 export KEYSTONE_ENDPOINT_TYPE='<%= @keystone_endpoint_type %>'
 export NOVA_ENDPOINT_TYPE='<%= @nova_endpoint_type %>'
 export NEUTRON_ENDPOINT_TYPE='<%= @neutron_endpoint_type %>'
-export IDENTITY_API_VERSION='<%= @identity_api_version %>'
+export OS_IDENTITY_API_VERSION='<%= @identity_api_version %>'
