Added OS_AUTH_TYPE parameter to auth file
Some services like Gnocchi can not get proper endpoint from
Keystone service.
Exporting variable: OS_AUTH_TYPE with value 'password'
will fix the problem.

Change-Id: I96aa50f152297dd406c505de1305fe6c796e7f96
(cherry picked from commit c8a4e3cb2b7d7b6ef6a6aa569d1f9fda68b26e34)

--- a/templates/openrc.erb
+++ b/templates/openrc.erb
@@ -21,6 +21,9 @@ export OS_PROJECT_DOMAIN_NAME='<%= @project_domain %>'
 <% if @user_domain -%>
 export OS_USER_DOMAIN_NAME='<%= @user_domain %>'
 <% end -%>
+<% if @auth_type -%>
+export OS_AUTH_TYPE='<%= @auth_type %>'
+<% end -%>
 export CINDER_ENDPOINT_TYPE='<%= @cinder_endpoint_type %>'
 export GLANCE_ENDPOINT_TYPE='<%= @glance_endpoint_type %>'
 export KEYSTONE_ENDPOINT_TYPE='<%= @keystone_endpoint_type %>'
