Set OS_INTERFACE and OS_ENDPOINT_TYPE in auth file
OSC does not use service-specific environment variables for choosing
endpoints. It requires a common OS_INTERFACE variable that is used for
--os-interface.
OS_ENDPOINT_TYPE is the analog for older service-specific clients and is
used for --os-endpoint-type.

Change-Id: I5dd8de00e72631d578cf7e0b7028705a5cda1ddb

--- a/templates/openrc.erb
+++ b/templates/openrc.erb
@@ -24,6 +24,8 @@ export OS_USER_DOMAIN_NAME='<%= @user_domain %>'
 <% if @auth_type -%>
 export OS_AUTH_TYPE='<%= @auth_type %>'
 <% end -%>
+export OS_INTERFACE='<%= @os_interface %>'
+export OS_ENDPOINT_TYPE='<%= @os_endpoint_type %>'
 export CINDER_ENDPOINT_TYPE='<%= @cinder_endpoint_type %>'
 export GLANCE_ENDPOINT_TYPE='<%= @glance_endpoint_type %>'
 export KEYSTONE_ENDPOINT_TYPE='<%= @keystone_endpoint_type %>'
